k8s/simple-api-manifests/environments/qa/deployment.yaml
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: api
#   namespace: qa
#   labels:
#     app: api
# spec:
#   template:
#     spec:
#       containers:
#       - name: webserver-simple
#         env:
#           - name: ENV
#             valueFrom:
#               secretKeyRef:
#                 name: mysecrets
#                 key: ENV

apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: qa
  labels:
    app: api
spec:
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      restartPolicy: Always
      containers:
      - name: api
        image: ergikame/hyra-frontend:0.0.7
        ports:
          - name: http
            containerPort: 3000
            protocol: TCP
