k8s/simple-api-manifests/environments/qa/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: api
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: ergikame/hyra-frontend:0.0.91
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
  strategy:
    canary:
      canaryService: api-service-canary  # required
      stableService: api-service  # required
      trafficRouting:
        nginx:
          stableIngress: api-ingress  # required
      steps:
      - setWeight: 20
      - pause: {}
      - setWeight: 40
      - pause: {duration: 20s}
      - setWeight: 60
      - pause: {duration: 10s}
      - setWeight: 80
      - pause: {duration: 10s}
