k8s/simple-api-manifests/environments/qa/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: qa
spec:
  selector:
    app: api
  ports:
    - name: https
      protocol: TCP
      port: 443
      targetPort: 3000
