k8s/simple-api-manifests/environments/qa/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  name: api-ingress
spec:
  tls:
    - hosts:
        - "api.argotest.tk"
      secretName: api-new-tls
  rules:
    - host: "api.argotest.tk"
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: api-service
                port:
                  number: 443
